# x402hackathon-judge

./: .gitignore  README.md  add_pitches.py  add_video_links.py  commit_analysis.csv  merge_sherkhan_data.py  pyproject.toml  submissions.csv
.claude/: CLAUDE.md
.claude/agents/: COLLABORATION-MATRIX.md  git-forensics.md  repo-analyzer.md  report-writer.md  scoring-engine.md  x402-expert.md
results/: executive-summary.md  rankings.json  rankings.md  timeline_audit.json  timeline_audit.md
results/logs/: skipped.json
results/projects/: aegis402.md  aetherswarm.md  agent-native_public_goods_sustainability.md  agent_trust_gateway.md  agentarc.md  agentecho.md  agentokratia_marketplace.md  ai_data_broker.md  aimobet.md  attentium.md  autoincentive_weather_forecast_x402_agent.md  autostack_dca.md  bitx402.md  bloom_protocol_-_bloom_mission_bot.md  bluepagesfyi.md  brolli_by_optilex.md  cheddr_payment_channels_x402.md  credpay.md  cumulus.md  dns402.md  dsx_engine_-_decentralized_dataspace_connector_wit.md  estate_tokens-tokenizing_real_world_assets.md  everybid.md  fortuner.md  googolo_wallet.md  grantees.md  hilt_human_in_loop_transactions.md  hyperkit.md  invitemarkets.md  linksignx402.md  mbcompass.md  medicproof.md  microai-paygate.md  miraipay.md  miye.md  mnemonic_hunt.md  nanopay.md  nexus_protocol.md  nodusai.md  oidcx402_-_micropayments_for_decentralized_identit.md  (+53 more)
src/hackathon_judge/: __init__.py  __main__.py  config.py  models.py
src/hackathon_judge/analyzer/: __init__.py  git_forensics.py  repo_analyzer.py  x402_detector.py
(+12 files in other folders)
